# mostitch

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  INSTALL  LICENSE  README  README.md  config.cfg
docs/: _a_g_data_structures_8h.html  _a_g_data_structures_8h_source.html  _a_g_image_blender_8cpp.html  _a_g_image_blender_8cpp_source.html  _a_g_image_blender_8h.html  _a_g_image_blender_8h_source.html  _a_g_image_loader_8cpp.html  _a_g_image_loader_8cpp_source.html  _a_g_image_loader_8h.html  _a_g_image_loader_8h_source.html  _a_g_image_preprocessing_8cpp.html  _a_g_image_preprocessing_8cpp_source.html  _a_g_image_preprocessing_8h.html  _a_g_image_preprocessing_8h_source.html  _a_g_mosaic_stitcher_8cpp.html  _a_g_mosaic_stitcher_8cpp_source.html  _a_g_mosaic_stitcher_8h.html  _a_g_mosaic_stitcher_8h_source.html  _a_g_open_c_v_helper_8cpp.html  _a_g_open_c_v_helper_8cpp_source.html  _a_g_open_c_v_helper_8h.html  _a_g_open_c_v_helper_8h_source.html  _a_g_path_detection_8cpp_source.html  _a_g_path_detection_8h_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  class_a_g_image_blender-members.html  class_a_g_image_blender.html  class_a_g_image_loader-members.html  class_a_g_image_loader.html  class_a_g_image_preprocessing-members.html  class_a_g_image_preprocessing.html  class_a_g_mosaic_stitcher-members.html  class_a_g_mosaic_stitcher.html  class_a_g_open_c_v_helper-members.html  class_a_g_open_c_v_helper.html  class_a_g_path_detection-members.html  class_a_g_path_detection.html  classes.html  dir_29198541578abc48a8bd21d1e37d4121.html  (+27 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+14 more)
src/: AGDataStructures.h  AGImageBlender.cpp  AGImageBlender.h  AGImageLoader.cpp  AGImageLoader.h  AGImagePreprocessing.cpp  AGImagePreprocessing.h  AGMosaicStitcher.cpp  AGMosaicStitcher.h  AGOpenCVHelper.cpp  AGOpenCVHelper.h  AGPathDetection.cpp  AGPathDetection.h  CMakeLists.txt  main.cpp
